some subjective color change

--- a/mudamuda/Base.lproj/Main_iPhone.storyboard
+++ b/mudamuda/Base.lproj/Main_iPhone.storyboard
@@ -229,7 +229,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" red="0.82078066479400746" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.19877407499999999" green="0.53590576180000005" blue="0.80071177120000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="c9P-13-KSk" firstAttribute="trailing" secondItem="GHv-9L-WXE" secondAttribute="trailing" id="1q3-2u-jku"/>
                             <constraint firstItem="c9P-13-KSk" firstAttribute="leading" secondItem="ls9-cf-SBy" secondAttribute="leading" id="1v8-4P-LMb"/>
