--- a/mudamuda/Base.lproj/Main_iPhone.storyboard
+++ b/mudamuda/Base.lproj/Main_iPhone.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nut-dc-nFb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="nut-dc-nFb">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Quiz Selector TableVC - Multiple Choice Quizes-->
+        <!--Quiz Selector TableVC - Exercises-->
         <scene sceneID="081-h1-nzu">
             <objects>
                 <tableViewController id="rwH-BB-NuE" customClass="FPNQuizSelectorTableVC" sceneMemberID="viewController">
@@ -27,7 +27,7 @@
                             <outlet property="delegate" destination="rwH-BB-NuE" id="WGj-Ia-wrz"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Multiple Choice Quizes" id="2mo-9u-bmc"/>
+                    <navigationItem key="navigationItem" title="Exercises" id="2mo-9u-bmc"/>
                     <connections>
                         <segue destination="vXZ-lx-hvc" kind="push" identifier="toMultipleChoice" id="NzL-eN-VtD"/>
                     </connections>
