--- a/mudamuda/Base.lproj/Main_iPad.storyboard
+++ b/mudamuda/Base.lproj/Main_iPad.storyboard
@@ -1,25 +1,101 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="Swh-cJ-saJ">
     <dependencies>
+        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <scene sceneID="MEh-5L-kPj">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="FPNViewController" sceneMemberID="viewController">
+                <viewController id="qYy-hJ-VdE" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="dHk-2T-xR8"/>
+                        <viewControllerLayoutGuide type="bottom" id="M8F-ag-BPw"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="Vzu-WV-6p9">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick an exercise on the nav bar to get started" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fTh-oV-Q9H">
+                                <rect key="frame" x="20" y="463" width="728" height="98"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="41"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="fTh-oV-Q9H" secondAttribute="trailing" id="IkW-of-5Pt"/>
+                            <constraint firstAttribute="centerY" secondItem="fTh-oV-Q9H" secondAttribute="centerY" id="Jbb-F6-SXW"/>
+                            <constraint firstItem="fTh-oV-Q9H" firstAttribute="leading" secondItem="Vzu-WV-6p9" secondAttribute="leadingMargin" id="dDe-mx-1aW"/>
+                        </constraints>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VDD-gN-Ri2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="953" y="1913"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="5Zo-Va-tj7">
+            <objects>
+                <navigationController id="p7d-so-Ju0" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Jay-N5-2Ut">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="mlg-vf-9G9" kind="relationship" relationship="rootViewController" id="D0l-C9-w7H"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2gt-Dl-lyQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="722" y="827"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="dEK-21-znT">
+            <objects>
+                <splitViewController id="Swh-cJ-saJ" sceneMemberID="viewController">
+                    <connections>
+                        <outlet property="delegate" destination="NVN-Ew-kfE" id="q4I-Ge-Q2X"/>
+                        <segue destination="p7d-so-Ju0" kind="relationship" relationship="masterViewController" id="2Gk-Ig-yCc"/>
+                        <segue destination="qYy-hJ-VdE" kind="relationship" relationship="detailViewController" id="bcO-Rx-YbW"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mIs-p4-X4R" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="NVN-Ew-kfE" customClass="FPNIPadSplitViewControllerDelegate"/>
+            </objects>
+            <point key="canvasLocation" x="-36" y="1369"/>
+        </scene>
+        <!--Exercises-->
+        <scene sceneID="Osl-3Y-rw8">
+            <objects>
+                <tableViewController id="mlg-vf-9G9" customClass="FPNQuizSelectorTableVC" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="wch-nA-Exj">
+                        <rect key="frame" x="0.0" y="0.0" width="308" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="quizSelect" id="3u6-E3-fNa">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3u6-E3-fNa" id="J4O-AP-I7a">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="mlg-vf-9G9" id="5nq-SH-lF0"/>
+                            <outlet property="delegate" destination="mlg-vf-9G9" id="Wlz-Am-Lob"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Exercises" id="4H0-TX-C7w"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7na-lb-dP3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1102" y="803"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
